<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">MLKit-AutoML-Remote</string>
  <string name="ok">OK</string>
  <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
  <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
  <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
  <string name="toggle_turn_on">Front</string>
  <string name="toggle_turn_off">Back</string>
  <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
  <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
  <string name="desc_camerax_live_preview_activity">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
  <string name="download_error">Download error</string>
  <string name="start_over">Start over</string>
  <string name="menu_item_settings">Settings</string>
  <string name="select_image">Select image</string>

  <!-- Settings related strings. -->
  <string name="pref_screen_title_live_preview">Live preview settings</string>
  <string name="pref_screen_title_still_image">Still image settings</string>
  <string name="pref_screen_title_camerax_live_preview">CameraX live preview settings</string>
  <string name="pref_category_face_detection">Face Detection</string>
  <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
  <string name="pref_category_automl">AutoML Image Labeling</string>
  <string name="pref_category_pose_detection">Pose Detection</string>

  <!-- Strings for camera settings. -->
  <string name="pref_category_key_camera" translatable="false">pckc</string>
  <string name="pref_category_title_camera">Camera</string>
  <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
  <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
  <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
  <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
  <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
  <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
  <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
  <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
  <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
  <string name="pref_title_camerax_rear_camera_target_resolution">CameraX rear camera target resolution</string>
  <string name="pref_title_camerax_front_camera_target_resolution">CameraX front camera target resolution</string>
  <string name="pref_title_camera_live_viewport">Enable live viewport</string>
  <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>


  <!-- Strings for automl remote model name preference. -->
  <string name="pref_title_automl_remote_model_name">AutoML Remote Model Name</string>
  <string name="pref_key_automl_remote_model_name" translatable="false">armn</string>
  <string name="pref_dialog_message_automl_remote_model_name">Remote model name in the Firebase Console.</string>
</resources>
